--- a/main.html
+++ b/main.html
@@ -3,11 +3,24 @@
 <html>
 
 <head>
+	<title>CSS class Selector</title>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		p.selector{
+			color:#00f;
+            Background-color:#eee;
+            font-family:Arial;
+            font-size:20px;
+		}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p class="selector">Pragraph 1</p>
+	<p>Pragraph 2</p>
+	<p class="selector">Pragraph 3</p>
+	<p>Pragraph 4</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
